# agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG-next.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  DX.md  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Justfile  LICENSE-MIT  NOTICE  PLAN.md  README.md  SECURITY.md  T.md  TODO.md  TRANSLATIONS.md  clippy.toml  deny.toml  docker-compose.yml  install.sh  release-plz.toml  setup.bat  setup.ps1
.circleci/: config.yml
.github/workflows-disabled/: ci.yml.disabled  cross-platform-build-manual.yml.disabled  daily-audit.yml.disabled  discord-release.yml.disabled  docs-deploy.yml.disabled  pr-path-labeler.yml.disabled  pr-title.yml.disabled  pub-aur.yml.disabled  pub-homebrew-core.yml.disabled  pub-scoop.yml.disabled  release-stable-manual.yml.disabled  tweet-release.yml.disabled
apps/agentcode/: Cargo.toml
apps/tauri/: Cargo.toml  Info.plist  TESTING.md  build.rs  tauri.conf.json
benches/: agent_benchmarks.rs
crates/aardvark-sys/: Cargo.toml
crates/dx-agent-api/: Cargo.toml
crates/dx-agent-channels/: Cargo.toml
crates/dx-agent-config/: Cargo.toml
crates/dx-agent-gateway/: Cargo.toml
crates/dx-agent-gateway/src/: acp.rs  api.rs  api_browse.rs  api_config.rs  api_logs.rs  api_personality.rs  api_plugins.rs  api_quickstart.rs  api_sections.rs  api_skills.rs  api_webauthn.rs  canvas.rs  hardware_context.rs  lib.rs  node_tool.rs  nodes.rs  openapi.rs  openapi_docs.html  session_queue.rs  sse.rs  static_files.rs  tls.rs  voice_duplex.rs  ws.rs  ws_approval.rs
crates/dx-agent-hardware/: Cargo.toml
crates/dx-agent-infra/: Cargo.toml
crates/dx-agent-log/: Cargo.toml
crates/dx-agent-macros/: Cargo.toml
crates/dx-agent-macros/src/: lib.rs
crates/dx-agent-memory/: Cargo.toml
crates/dx-agent-plugins/: AGENTS.md  Cargo.toml
crates/dx-agent-providers/: Cargo.toml
crates/dx-agent-runtime/: AGENTS.md  Cargo.toml
crates/dx-agent-sidecars/: Cargo.toml
crates/dx-agent-sidecars/src/: deerflow.rs  hermes.rs  lib.rs  openclaw.rs  protocol.rs
crates/dx-agent-spawn/: Cargo.toml
crates/dx-agent-tool-call-parser/: Cargo.toml
crates/dx-agent-tools/: Cargo.toml
crates/robot-kit/: Cargo.toml  PI5_SETUP.md  README.md  robot.toml
crates/zeroclaw-providers/: Cargo.toml
deploy-k8s/: README.md  configmap-sample.yaml  deployment-sample.yaml  namespace-sample.yaml  route-sample.yaml  secret-sample.yaml  service-sample.yaml
dev/: README.md  ci.sh  cli.sh  config.harness-test.toml  config.template.toml  docker-compose.yml  run-tauri-dev.sh  test-harness.sh  test-registry-skills.sh
docs/: dashboard-compatibility-migration.md  integration-roadmap.md  native-promotion-archive-trend-runbook.md  remote-execution-canary-drift-alert-runbook.md  remote-execution-ci-promotion-alert-digest-history-alert-runbook.md  remote-execution-ci-promotion-alert-digest-runbook.md  remote-execution-ci-promotion-enforcement-history-alert-runbook.md  remote-execution-ci-promotion-enforcement-runbook.md  remote-execution-ci-promotion-history-alert-runbook.md  remote-execution-ci-promotion-opt-in-policy-history-alert-runbook.md  remote-execution-ci-promotion-opt-in-policy-runbook.md  remote-execution-ci-promotion-release-candidate-runbook.md  remote-execution-ci-promotion-rollout-audit-digest-history-alert-runbook.md  remote-execution-ci-promotion-rollout-audit-digest-runbook.md  remote-execution-ci-promotion-rollout-pack-history-alert-runbook.md  remote-execution-ci-promotion-rollout-pack-runbook.md  remote-execution-ci-promotion-runbook.md  remote-execution-ci-promotion-strict-checklist-history-alert-runbook.md  remote-execution-ci-promotion-strict-checklist-runbook.md  remote-execution-ci-promotion-strict-policy-history-alert-runbook.md  remote-execution-ci-promotion-strict-policy-runbook.md  remote-execution-ci-promotion-workflow-template-runbook.md  remote-execution-readiness-alert-runbook.md  remote-execution-readiness-ci-alert-runbook.md  remote-execution-readiness-ci-digest-alert-runbook.md  remote-execution-readiness-ci-digest-runbook.md  remote-execution-readiness-ci-gate-runbook.md  remote-execution-readiness-ci-history-runbook.md  remote-execution-release-gate-audit-alert-runbook.md  remote-execution-release-gate-digest-alert-runbook.md  session-tool-routing.md  tool-safety-alert-runbook.md  tool-safety-audit-review-alert-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-digest-alert-digest-alert-digest-alert-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-digest-alert-digest-alert-digest-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-digest-alert-digest-alert-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-digest-alert-digest-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-digest-alert-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-digest-runbook.md  tool-safety-audit-review-recovery-alert-digest-release-gate-digest-alert-digest-alert-runbook.md  (+8 more)
docs/book/: book.toml
docs/maintainers/: excision-v0.8.0-incidents.md  excision-v0.8.0-line-count-report.md
docs/parity/: openclaw-hermes-core.md  openclaw-hermes-gap-review.md
firmware/arduino/: arduino.ino
firmware/esp32/: Cargo.toml  README.md  SETUP.md
firmware/esp32-ui/: Cargo.toml  README.md
fuzz/: Cargo.toml
memory/: merge-notes-first_model_provider.md
nix/: README.md  module.nix  test.nix
scripts/: README.md  deploy-rpi.sh  dx-agents.service  migrate-skill-toml.py  rpi-config.toml
src/: browse.rs  cli_input.rs  cli_provider_health.rs  cli_provider_health_live.rs  cli_provider_health_tests.rs  cli_provider_json.rs  dx_config.rs  i18n.rs  identity.rs  lib.rs  main.rs  migration.rs  multimodal.rs  schema_markdown.rs  util.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
xtask/: Cargo.toml
(+811 files in other folders)
