[workspace]
members = [".", "crates/dx-agent-api", "crates/dx-agent-infra", "crates/dx-agent-config", "crates/dx-agent-log", "crates/dx-agent-spawn", "crates/dx-agent-providers", "crates/dx-agent-memory", "crates/dx-agent-channels", "crates/dx-agent-tools", "crates/dx-agent-runtime", "apps/agentcode", "crates/dx-agent-plugins", "crates/dx-agent-gateway", "crates/dx-agent-hardware", "crates/dx-agent-tool-call-parser", "crates/robot-kit", "crates/aardvark-sys", "crates/dx-agent-macros", "apps/tauri", "tools/fill-translations", "xtask", "crates/dx-agent-sidecars"]
resolver = "2"
exclude = ["plugins/image-gen-fal"]

[workspace.package]
version = "0.8.0-beta-2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/millercarla211-ctrl/dx-agent"
rust-version = "1.87"

[workspace.dependencies]
dx-agent-api = { path = "crates/dx-agent-api", version = "0.8.0-beta-2" }
dx-agent-infra = { path = "crates/dx-agent-infra", version = "0.8.0-beta-2" }
dx-agent-config = { path = "crates/dx-agent-config", version = "0.8.0-beta-2", default-features = false }
dx-agent-log = { path = "crates/dx-agent-log", version = "0.8.0-beta-2" }
dx-agent-spawn = { path = "crates/dx-agent-spawn", version = "0.8.0-beta-2" }
dx-agent-providers = { path = "crates/dx-agent-providers", version = "0.8.0-beta-2" }
dx-agent-memory = { path = "crates/dx-agent-memory", version = "0.8.0-beta-2" }
dx-agent-channels = { path = "crates/dx-agent-channels", version = "0.8.0-beta-2", default-features = false }
dx-agent-tools = { path = "crates/dx-agent-tools", version = "0.8.0-beta-2" }
dx-agent-runtime = { path = "crates/dx-agent-runtime", version = "0.8.0-beta-2", default-features = false }
dx-agent-plugins = { path = "crates/dx-agent-plugins", version = "0.8.0-beta-2" }
dx-agent-gateway = { path = "crates/dx-agent-gateway", version = "0.8.0-beta-2" }
dx-agent-hardware = { path = "crates/dx-agent-hardware", version = "0.8.0-beta-2" }
dx-agent-tool-call-parser = { path = "crates/dx-agent-tool-call-parser", version = "0.8.0-beta-2" }
dx-agent-macros = { path = "crates/dx-agent-macros", version = "0.8.0-beta-2" }
aardvark-sys = { path = "crates/aardvark-sys", version = "0.1.0" }
dx-agent-sidecars = { path = "crates/dx-agent-sidecars", version = "0.8.0-beta-2", default-features = false }
flow = { path = "../flow", package = "dx-flow", version = "1.0.0" }
directories = "6.0"

[package]
name = "dx-agent"
# Publishing blocked during microkernel workspace transition — see #5811.
# All 14 workspace sub-crates are publish = false and therefore unresolvable
# on crates.io. Flip or remove this once the multi-crate publish topology is
# designed per RFC #5579.
publish = false
default-run = "dx-agent"
version.workspace = true
edition.workspace = true
authors = ["theonlyhennygod"]
license.workspace = true
description = "DX Agents: a Rust-first agent runtime with provider routing, memory, gateway pairing, cron, and skills."
repository.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version.workspace = true
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE*",
  "/README.md",
  "/web/dist/**/*",
  "/locales/**/*",
]

[[bin]]
name = "dx-agent"
path = "src/main.rs"

[[bin]]
name = "dx-agent-acp-bridge"
path = "src/bin/dx-agent-acp-bridge.rs"
required-features = ["acp-bridge"]

[lib]
name = "dx_agents"
path = "src/lib.rs"

[dependencies]
# Internal workspace crates — versions and paths declared once in [workspace.dependencies]
dx-agent-api.workspace = true
dx-agent-spawn.workspace = true
dx-agent-infra.workspace = true
dx-agent-config = { workspace = true, features = ["clap"] }
dx-agent-log.workspace = true
dx-agent-providers.workspace = true
dx-agent-memory.workspace = true
dx-agent-channels = { workspace = true, optional = true }
dx-agent-tools = { workspace = true, optional = true }
dx-agent-runtime = { workspace = true, optional = true }
dx-agent-plugins = { workspace = true, optional = true }
dx-agent-gateway = { workspace = true, optional = true }
dx-agent-hardware = { workspace = true, optional = true }
dx-agent-tool-call-parser.workspace = true
dx-agent-macros.workspace = true
dx-agent-sidecars = { workspace = true, optional = true }
flow = { workspace = true, optional = true }
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap-markdown = "0.1"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
memmap2 = "0.9"
rkyv = { version = "0.7", default-features = false, features = ["std", "size_32"] }

# Config
directories = "6.0"
toml = "1.0"
toml_edit = "0.25"  # already a transitive dep via toml — zero added compile/binary cost
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# HTML to plain text conversion (web_fetch tool)
nanohtml2text = "0.2"

# Tarball extraction for binary updates
flate2 = "1"
tar = "0.4"

# Progress bars (update pipeline)
indicatif = "0.18"

# Temp files (update pipeline rollback)
tempfile = "3.26"

# Zip extraction for ClawhHub / OpenClaw registry installers
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Aardvark I2C/SPI/GPIO USB adapter (Total Phase) — stub when SDK absent
aardvark-sys.workspace = true

# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# Portable atomic fallbacks for targets without native 64-bit atomics
portable-atomic = "1"

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = { version = "0.17", optional = true }

# LRU cache for bounded sender state
lru = { version = "0.16", optional = true }

# Memory / persistence (migration.rs, behind agent-runtime)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", optional = true }
cron = { version = "0.15", optional = true }

# Interactive CLI prompts (memory CLI uses dialoguer unconditionally)
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# TUI onboarding (ratatui + crossterm)
ratatui = { version = "0.30", default-features = true, optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }

# Hardware discovery (device path globbing)
glob = { version = "0.3", optional = true }

# Nostr key validation for wizard (behind channel-nostr feature)
nostr-sdk = { version = "0.44", default-features = false, optional = true }

# Binary discovery (init system detection)
which = { version = "8.0", optional = true }

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-socks = { version = "0.5", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
regex = "1.10"
hostname = { version = "0.4.2", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "1.0.6", optional = true }

# email
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"], optional = true }
mail-parser = { version = "0.11.2", optional = true }
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false, optional = true }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"], optional = true }
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"], optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"], optional = true }
http-body-util = { version = "0.1", optional = true }

# rust-embed removed — web dashboard served from filesystem via gateway.web_dist_dir
mime_guess = { version = "2", optional = true }

# DX Serializer (.sr / .machine format)
serializer = { path = "../serializer", package = "dx-serializer", version = "1.0.0" }

# Use the blocking HTTP exporter client to avoid Tokio-reactor panics in
# non-Tokio contexts.

# (Linux, macOS, Windows). Android/Termux uses target_os="android" and is excluded.

# Uses whatsapp-rust for Bot and Client, wacore for storage traits, custom rusqlite backend avoids Diesel conflict.

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = [
    "agent-runtime",
    "default-channels",
    "acp-bridge",
    "gateway",
    "observability-prometheus",
    "schema-export",
    "provider-flow",
]

# The core agent runtime — agent loop, tools, persistence subsystems.
# Without this, you get the kernel: config + providers + memory + CLI chat.
# Channels are opt-in via the lean `default-channels` bundle, `channels-full`,
# or individual `channel-*` features.
agent-runtime = [
    "dep:dx-agent-runtime", "dep:dx-agent-channels", "dep:dx-agent-tools",
    "dep:rusqlite",
    "dep:ring", "dep:lru", "dep:chrono-tz", "dep:cron", "dep:glob", "dep:which",
    "dep:ratatui", "dep:crossterm",
    "dep:tokio-tungstenite", "dep:tokio-socks", "dep:hostname",
    "dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:tokio-rustls", "dep:webpki-roots",
]

# Lean channel bundle included in `default`. These channels cover local/editor
# ACP, gateway/webhook ingress, and common first-run external chat/email paths.
default-channels = [
    "channel-acp-server", "channel-webhook",
    "channel-email", "channel-telegram",
]

# Historical broad channel bundle. Use this for builds that should preserve the
# pre-#6895 default channel surface.
channels-full = [
    "default-channels", "dx-agent-channels/channels-full", "channel-lark",
    "channel-discord", "channel-slack", "channel-signal",
    "channel-mattermost", "channel-irc", "channel-imessage",
    "channel-dingtalk", "channel-qq", "channel-bluesky",
    "channel-twitter", "channel-reddit", "channel-notion", "channel-mqtt",
    "channel-linq", "channel-wati", "channel-nextcloud",
    "channel-mochat", "channel-wecom", "channel-wecom-ws", "channel-clawdtalk",
    "channel-whatsapp-cloud", "channel-voice-call",
]

# Major subsystems — each forwards to exactly ONE crate
gateway = [
    "dep:dx-agent-gateway",
    "dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower", "dep:tower-http", "dep:http-body-util",
    "dep:mime_guess",
]
schema-export = ["dx-agent-config/schema-export"]
acp-bridge = ["dep:tokio-tungstenite"]

# Channels — each forwards to dx-agent-channels.
channel-email = ["dx-agent-channels/channel-email", "dx-agent-gateway?/channel-email", "dep:lettre", "dep:mail-parser", "dep:async-imap"]
channel-telegram = ["dx-agent-channels/channel-telegram"]
channel-lark = ["dx-agent-channels/channel-lark"]
channel-nostr = ["dx-agent-channels/channel-nostr", "dep:nostr-sdk"]
channel-matrix = ["dx-agent-channels/channel-matrix"]
channel-discord = ["dx-agent-channels/channel-discord"]
channel-slack = ["dx-agent-channels/channel-slack"]
channel-signal = ["dx-agent-channels/channel-signal"]
channel-mattermost = ["dx-agent-channels/channel-mattermost"]
channel-irc = ["dx-agent-channels/channel-irc"]
channel-imessage = ["dx-agent-channels/channel-imessage"]
channel-dingtalk = ["dx-agent-channels/channel-dingtalk"]
channel-qq = ["dx-agent-channels/channel-qq"]
channel-bluesky = ["dx-agent-channels/channel-bluesky"]
channel-twitter = ["dx-agent-channels/channel-twitter"]
channel-reddit = ["dx-agent-channels/channel-reddit"]
channel-notion = ["dx-agent-channels/channel-notion"]
channel-mqtt = ["dx-agent-channels/channel-mqtt"]
channel-linq = ["dx-agent-channels/channel-linq", "dx-agent-gateway?/channel-linq"]
channel-wati = ["dx-agent-channels/channel-wati", "dx-agent-gateway?/channel-wati"]
channel-nextcloud = ["dx-agent-channels/channel-nextcloud", "dx-agent-gateway?/channel-nextcloud"]
channel-mochat = ["dx-agent-channels/channel-mochat"]
channel-wechat = ["dx-agent-channels/channel-wechat"]
channel-wecom = ["dx-agent-channels/channel-wecom"]
channel-wecom-ws = ["dx-agent-channels/channel-wecom-ws"]
channel-clawdtalk = ["dx-agent-channels/channel-clawdtalk"]
channel-webhook = ["dx-agent-channels/channel-webhook"]
channel-acp-server = ["dx-agent-channels/channel-acp-server", "dx-agent-gateway?/channel-acp-server"]
channel-whatsapp-cloud = ["dx-agent-channels/channel-whatsapp-cloud", "dx-agent-gateway?/channel-whatsapp-cloud"]
channel-voice-call = ["dx-agent-channels/channel-voice-call"]
channel-line = ["dx-agent-channels/channel-line"]
# Feishu uses the same channel implementation as Lark; `use_feishu = true`
# selects Feishu endpoints at runtime.
channel-feishu = ["channel-lark"]
whatsapp-web = ["dx-agent-channels/whatsapp-web"]
voice-wake = ["dx-agent-channels/voice-wake"]
memory-postgres = ["dx-agent-memory/memory-postgres"]

# Backends and platform flags — each forwards to ONE crate
observability-prometheus = [
    "dx-agent-runtime/observability-prometheus",
    "dx-agent-gateway/observability-prometheus",
]
observability-otel = ["dx-agent-runtime/observability-otel"]
hardware = ["dep:dx-agent-hardware", "dx-agent-hardware/hardware"]
peripheral-rpi = ["dep:dx-agent-hardware", "dx-agent-hardware/peripheral-rpi"]
# Forwards `dx-agent-hardware/dev-sim`: extends the serial allow-list with
# `/tmp/zc-sim-*` for hardware-free simulation. Off by default; opt-in for the
# simulator and demo.
dev-sim = ["dep:dx-agent-hardware", "dx-agent-hardware/dev-sim"]
sandbox-landlock = ["dx-agent-runtime/sandbox-landlock"]
sandbox-bubblewrap = ["dx-agent-runtime/sandbox-bubblewrap"]
browser-native = ["dx-agent-tools/browser-native"]
plugins-wasm = ["agent-runtime", "dep:dx-agent-plugins", "dx-agent-runtime/plugins-wasm"]
probe = ["dep:dx-agent-hardware", "dx-agent-hardware/probe"]
rag-pdf = ["dx-agent-tools/rag-pdf", "dx-agent-runtime/rag-pdf"]
webauthn = ["dx-agent-runtime/webauthn", "dx-agent-gateway?/webauthn"]
embedded-web = ["dx-agent-gateway/embedded-web"]

# Backward-compatible aliases
fantoccini = ["browser-native"]
landlock = ["sandbox-landlock"]
metrics = ["observability-prometheus"]

# Local model provider via dx-flow
provider-flow = ["dep:flow", "dx-agent-providers/provider-flow"]

# Sidecar features — wire external forks into dx-agent
sidecar-openclaw = ["dx-agent-sidecars/openclaw"]
sidecar-hermes = ["dx-agent-sidecars/hermes"]
sidecar-deerflow = ["dx-agent-sidecars/deerflow"]
sidecar-all = ["sidecar-openclaw", "sidecar-hermes", "sidecar-deerflow"]

# CI meta-feature
ci-all = [
    "agent-runtime",
    "channels-full",
    "channel-nostr", "channel-matrix", "whatsapp-web",
    "observability-prometheus", "observability-otel",
    "hardware", "peripheral-rpi",
    "sandbox-landlock", "sandbox-bubblewrap",
    "browser-native", "plugins-wasm", "probe", "rag-pdf",
    "webauthn", "memory-postgres",
]

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.release-fast]
inherits = "release"
codegen-units = 8    # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
                     # Use: cargo build --profile release-fast

[profile.ci]
inherits = "release"
lto = "thin"         # Much faster than fat LTO; still catches release-mode issues
codegen-units = 16   # Full parallelism for CI runners

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
rcgen = "0.13"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"

# Architecture invariant gates. Fail-on-detect for patterns that
# violate the workspace's ABSOLUTE RULE (AGENTS.md §1) — duplicate
# state across the codebase. Run with `cargo test --test architecture`
# during development; the workspace `cargo test` already includes it.
[[test]]
name = "architecture"
path = "tests/test_architecture.rs"

[[bench]]
name = "agent_benchmarks"
harness = false
