[package]
name = "dx-agent-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket gateway for DX Agent — REST API, web dashboard, webhooks."
publish = false

[dependencies]
# Internal workspace crates
dx-agent-api.workspace = true
dx-agent-spawn.workspace = true
dx-agent-config.workspace = true
dx-agent-infra.workspace = true
dx-agent-log.workspace = true
dx-agent-memory.workspace = true
dx-agent-providers.workspace = true
dx-agent-channels = { workspace = true, default-features = false, features = ["channel-acp-server"] }
dx-agent-runtime.workspace = true
dx-agent-tools.workspace = true
dx-agent-hardware.workspace = true
dx-agent-plugins = { workspace = true, optional = true }

# HTTP server
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout", "fs"] }
http-body-util = "0.1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "ring"] }

# Frontend asset MIME type detection (dashboard served from filesystem)
mime_guess = "2"

# Base64 encoding for binary file content in agent workspace `read` responses.
base64 = "0.22"
include_dir = { version = "0.7", optional = true }

# Schemars JSON Schema generation for OPTIONS responses; matches the version
# dx-agent-config already pulls.
schemars = { version = "1.2", optional = true }

# Async runtime
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "signal"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Error handling
anyhow = "1.0"
async-trait = "0.1"
directories = "6.0"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Database (session queue)
rusqlite = { version = "0.37", features = ["bundled"] }

# Misc
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
toml = "1.0"
toml_edit = "0.25"
rustls-pemfile = "2"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
rand = "0.10"
rcgen = "0.13"
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }

[features]
default = ["schema-export"]
plugins-wasm = ["dep:dx-agent-plugins"]
webauthn = ["dx-agent-runtime/webauthn"]
observability-prometheus = ["dx-agent-runtime/observability-prometheus"]
channel-acp-server = ["dx-agent-channels/channel-acp-server"]
channel-email = ["dx-agent-channels/channel-email"]
channel-linq = ["dx-agent-channels/channel-linq"]
channel-nextcloud = ["dx-agent-channels/channel-nextcloud"]
channel-nostr = ["dx-agent-channels/channel-nostr"]
channel-wati = ["dx-agent-channels/channel-wati"]
channel-whatsapp-cloud = ["dx-agent-channels/channel-whatsapp-cloud"]
gateway-voice-duplex = []
# Enables OPTIONS /api/config* responses with the schemars-generated
# JSON Schema body and the serde-side schemars derives transitively. Defaults
# on; turning it off omits OPTIONS schema bodies (returns a small placeholder)
# and saves a bit of build time. Mirrors dx-agent-config's `schema-export`.
schema-export = ["dx-agent-config/schema-export", "dep:schemars"]
embedded-web = ["dep:include_dir"]
