[package]
name = "dx-agent-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for DX Agent (config field derivation)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
