[package]
name = "dx-agent-sidecars"
version.workspace = true
authors = ["theonlyhennygod"]
edition.workspace = true
license.workspace = true
description = "Sidecar process management for dx-agent — spawns, manages, and communicates with external service forks via JSON-RPC 2.0 over stdin/stdout."

[features]
default = []
openclaw = []
hermes = []
deerflow = []
all = ["openclaw", "hermes", "deerflow"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["io-util", "process", "sync", "time"] }
tracing = "0.1"
anyhow = "1.0"
